--- a/src/containers/HomePage/HomeHeader.scss
+++ b/src/containers/HomePage/HomeHeader.scss
@@ -55,3 +55,105 @@
 
 
 }
+
+.home-header-banner {
+    background: url(../../assets/header-background.jpg) center center no-repeat;
+    margin-top: 10px;
+    height: 485px;
+
+    .content-up {
+        height: 50%;
+        display: flex;
+        flex-direction: column;
+        border: 1px solid grey;
+        padding-top: 20px;
+
+        .title1 {
+            text-align: center;
+            font-size: 30px;
+            margin-bottom: 5px;
+            color: white;
+            // margin-top: 30px;
+            text-shadow: 1px 1px 1px #333;
+        }
+
+        .title2 {
+            text-align: center;
+            font-size: 30px;
+            margin-bottom: 5px;
+            color: white;
+            // margin-top: 30px;
+            text-shadow: 1px 1px 1px #333;
+            margin-bottom: 15px;
+        }
+
+        .search {
+            width: fit-content;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto;
+            padding: 10px;
+            border-radius: 25px;
+            background-color: #f7d800;
+
+            i {
+                margin: 0 5px;
+            }
+
+            input {
+                height: 30px;
+                width: 360px;
+                background: transparent;
+                border: none;
+                outline: none;
+            }
+        }
+    }
+
+    .content-down {
+        height: 50%;
+        border: 1px solid green;
+        display: flex;
+        justify-content: center;
+
+        .options {
+            display: flex;
+            justify-content: center;
+            text-align: center;
+            gap: 50px;
+            align-items: end;
+
+            .option-child {
+                border: 1px solid red;
+                width: 125px;
+                height: 125px;
+
+                .icon-child {
+                    background: white;
+                    width: 40px;
+                    height: 40px;
+                    padding: 10px;
+                    border-radius: 50%;
+                    text-align: center;
+                    margin: 0 auto;
+
+                    i {
+                        font-size: 20px;
+                        color: #49bce2;
+                    }
+                }
+
+                .text-child {
+                    font-size: 17px;
+                    font-weight: 500;
+
+                    &:hover {
+                        color: #49bce2;
+                    }
+                }
+            }
+        }
+    }
+
+}
