--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -49,6 +49,14 @@
     &.section-outstanding-doctor {
         background-color: #f5f5f5;
 
+        .slick-prev {
+            left: 8px !important;
+        }
+
+        .slick-next {
+            right: 8px !important;
+        }
+
         .section-img {
             background: url(../../assets/anh-dai-dien-bs.jpg) center center no-repeat;
             height: 120px !important;
@@ -70,6 +78,25 @@
 
         .section-img {
             background: url(../../assets/drcare.jpg) center center no-repeat;
+        }
+    }
+
+    &.section-about {
+        background-color: #f5f5f5;
+        height: 525px;
+        border-bottom: 1px solid #c7b6b6;
+
+        .section-body {
+            display: flex;
+            gap: 30px;
+
+            .about-video {
+                width: 60%;
+            }
+
+            .about-text {
+                width: 40%;
+            }
         }
     }
 
@@ -115,4 +142,9 @@
             }
         }
     }
+}
+
+.home-footer {
+    text-align: center;
+    padding: 8px;
 }
