--- a/src/containers/Header/Header.scss
+++ b/src/containers/Header/Header.scss
@@ -25,6 +25,10 @@
         display: flex;
         align-items: center;
 
+        .welcome{
+            margin-right: 10px;
+        }
+
         .language-en {
             margin-right: 15px;
             margin-left: 10px;
