--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -34,7 +34,7 @@
         background-color: #f5f5f5;
 
         .section-img {
-            background: url(../../assets/specialty/co-xuong-khop.jpg) center center no-repeat;
+            // background: url(../../assets/specialty/co-xuong-khop.jpg) center center no-repeat;
         }
     }
 
