--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -24,6 +24,10 @@
     color: #959595 !important;
 }
 
+.slick-disabled {
+    display: none !important;
+}
+
 //..................................................
 
 .section-share {
@@ -34,7 +38,7 @@
         background-color: #f5f5f5;
 
         .section-img {
-            // background: url(../../assets/specialty/co-xuong-khop.jpg) center center no-repeat;
+            background: url(../../assets/specialty/co-xuong-khop.jpg) center center no-repeat;
         }
     }
 
