--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -74,6 +74,7 @@
             width: 80%;
             margin: 0 auto;
             padding: 10px;
+            cursor: pointer;
         }
     }
 
