--- a/src/containers/System/Admin/ManageDoctor.scss
+++ b/src/containers/System/Admin/ManageDoctor.scss
@@ -37,4 +37,20 @@
             opacity: 0.9;
         }
     }
+
+    .update-content-doctor {
+        margin-top: 20px;
+        margin-bottom: 30px;
+        border-radius: 3px;
+        outline: none;
+        border: none;
+        padding: 5px;
+        background-color: rgb(8, 0, 254);
+        cursor: pointer;
+        color: white;
+
+        &:hover {
+            opacity: 0.9;
+        }
+    }
 }
