--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -48,6 +48,12 @@
         background: #eee;
         border-top: 1px solid #ccc;
         border-bottom: 1px solid #ccc;
+
+        img {
+            max-width: 100%;
+            margin: 0 auto;
+            display: block;
+        }
     }
 
 
