--- a/src/containers/Doctor/ManageSchedule.scss
+++ b/src/containers/Doctor/ManageSchedule.scss
@@ -8,4 +8,9 @@
         font-size: 17px;
         text-align: center;
     }
+
+    .pick-hour-container{
+        height: 150px;
+        border: 1px solid red;
+    }
 }
