--- a/src/containers/Doctor/ManageSchedule.scss
+++ b/src/containers/Doctor/ManageSchedule.scss
@@ -10,7 +10,16 @@
     }
 
     .pick-hour-container{
-        height: 150px;
-        border: 1px solid red;
+        // height: 150px;
+        // border: 1px solid red;
+        padding: 10px 20px;
+        display: flex;
+        gap: 10px;
+        flex-wrap: wrap;
+
+        .btn-schedule{
+            border: 1px solid grey;
+            padding: 0px 10px;
+        }
     }
 }
