--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -47,7 +47,7 @@
         margin: 0 100px;
         display: flex;
         height: 200px;
-        border: 1px solid red;
+        // border: 1px solid red;
 
         .content-left {
             width: 50%;
