--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -46,7 +46,7 @@
     .schedule-doctor{
         margin: 0 100px;
         display: flex;
-        height: 200px;
+        padding: 10px 0;
         // border: 1px solid red;
 
         .content-left {
