--- a/src/containers/System/Admin/ManageDoctor.scss
+++ b/src/containers/System/Admin/ManageDoctor.scss
@@ -23,6 +23,10 @@
         }
     }
 
+    .more-info-extra {
+        margin-bottom: 15px;
+    }
+
     .save-content-doctor {
         margin-top: 20px;
         margin-bottom: 30px;
