--- a/src/containers/HomePage/HomePage.scss
+++ b/src/containers/HomePage/HomePage.scss
@@ -37,9 +37,22 @@
     &.section-speciality {
         background-color: #f5f5f5;
 
-        .section-img {
-            background: url(../../assets/specialty/co-xuong-khop.jpg) center center no-repeat;
+        .section-slide {
+            cursor: pointer;
+            .section-img {
+                // background: url(../../assets/specialty/co-xuong-khop.jpg) center center no-repeat;
+                background: center center no-repeat;
+            }
+    
+            .section-slide-title{
+                padding: 10px 0;
+
+                &:hover {
+                    color: #45c3d2;
+                }
+            }
         }
+        
     }
 
     &.section-medical-facility {
