--- a/src/containers/Patient/Doctor/DetailDoctor.scss
+++ b/src/containers/Patient/Doctor/DetailDoctor.scss
@@ -20,6 +20,7 @@
                 border-radius: 50%;
                 width: 120px;
                 margin: 0 auto;
+                background-size: cover;
             }
         }
 
