--- a/src/containers/Patient/Doctor/ProfileDoctor.scss
+++ b/src/containers/Patient/Doctor/ProfileDoctor.scss
@@ -13,6 +13,7 @@
                 border-radius: 50%;
                 width: 120px;
                 margin: 0 auto;
+                background-size: cover;
             }
         }
 
